# dotfiles

./: .bash_profile  .bashrc  .gitignore  .khrdc  .p10k.zsh  .spacemacs  .tmux.conf  .zshrc  Default.json  Preferences.sublime-settings  README.md  README.org  atom_config.cson  configuration.nix  display-setup.sh  down-dotfiles.sh  home.nix  install.sh  layout.sh  macos-install.sh  make-iosevka.sh  private-build-plans.toml  spacemacs-linux-install.sh  sublime3-settings  supervisord.conf  up-dotfiles.sh
.config/kitty/: .kitty.conf.swp  kitty.conf
.config/nvim/: init.vim
.config/xmobar/: config.hs
.kwm/: kwmrc
.xmonad/: xmonad.hs
applescript/: battery-percentage.sh  highlight-colour.scpt
doom/: config.el  init.el  packages.el
fish/: config.fish
fonts/iosevka-term-slab-haskell/: iosevka-term-slab-haskell.css
kitty/: kitty.conf
macOS/: .zshrc  home.sh  iTermProfile.json  install.sh  macos-install.sh
macOS/applescript/: appearance.scpt  highlight-colour.scpt  security-privacy.scpt
nvim/: init.vim
starship/: starship.toml
tmux/: .tmux.conf
widgets/: \  pyproject.toml  shell.nix  widget.py
xmobar/: config.hs  xmobar.hs
xmonad/: xmonad.hs
