[tool.poetry]
name = "widgets"
version = "0.1.0"
description = "Widgets for a status bar on Linux."
authors = ["jerbaroo <jerbaroo.work@pm.me>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
PyGObject = "^3.38.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
